--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html>
   <body>
     <h1>Hello, world!</h1>
@@ -6,4 +6,28 @@
   </body>
 
   <script src="./index.js" type="module"></script>
+</html> -->
+
+<!doctype html>
+<html>
+  <head>
+    <title>Dynamic Ranking</title>
+    <style>
+      /* Styling for the ranking box */
+      #ranking {
+        width: 500px;
+        padding: 20px;
+        border: 2px solid #333;
+        background-color: #f4f4f4;
+        margin-top: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Dynamic Ranking Application</h1>
+    <div id="ranking"></div>
+
+    <script src="./index.js" type="module"></script>
+  </body>
 </html>
