--- a/demo/index.html
+++ b/demo/index.html
@@ -12,22 +12,11 @@
 <html>
   <head>
     <title>Dynamic Ranking</title>
-    <style>
-      /* Styling for the ranking box */
-      #ranking {
-        width: 500px;
-        padding: 20px;
-        border: 2px solid #333;
-        background-color: #f4f4f4;
-        margin-top: 20px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Dynamic Ranking Application</h1>
     <div id="ranking"></div>
-
     <script src="./index.js" type="module"></script>
   </body>
 </html>
