--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Dynamic Ranking Application</h1>
+    <h1>Dynamic Ranking Demo Application</h1>
     <div id="ranking"></div>
     <script src="./index.js" type="module"></script>
   </body>
