adjust slider & rankings styling, specify features, remove fielding statistics

--- a/fanscale/index.html
+++ b/fanscale/index.html
@@ -47,7 +47,6 @@
                     <select id="group-select">
                         <option value="pitching">Pitching</option>
                         <option value="hitting">Hitting</option>
-                        <option value="fielding">Fielding</option>
                     </select>
                 </label>
             </div>
@@ -58,8 +57,16 @@
             
         </div>
 
-        <div id='rankings-container' class="rankings-placeholder">
-            <p>Rankings content placeholder...</p>
+        <div id='rankings-container' class="rankings-container">
+          <table id='rankings-table' class="rankings-table">
+            <thead>
+              <tr>
+                <th>Position</th>
+                <th>Name</th>
+                <th>Score</th>
+              </tr>
+            </thead>
+          </table>
         </div>
 
 
