--- a/fanscale/index.html
+++ b/fanscale/index.html
@@ -19,7 +19,7 @@
                 <a href="#">Home</a>
                 <a href="https://github.com/shaneferrellwv/dynamic-ranking">Library</a>
                 <!-- <a href="#">More Demos</a> -->
-                <a href="#">About</a>
+                <a href="docs/">Docs</a>
             </div>
         </nav>
 
