--- a/fanscale/custom-rank/index.html
+++ b/fanscale/custom-rank/index.html
@@ -15,7 +15,7 @@
                 <a href="index.html">Custom Dynamic Rankings</a>
             </div>
             <div class="nav-links">
-                <a href="#">Home</a>
+                <a href="/">Home</a>
                 <a href="https://github.com/shaneferrellwv/dynamic-ranking">Library</a>
             </div>
         </nav>
@@ -44,6 +44,10 @@
                 <option value="ascending">ascending</option>
               </select>
             </label>
+
+            <div id="strategies">
+              
+            </div>
             
           </div>
 
